--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -265,4 +265,10 @@
     <!-- enable doze powersaving mode -->
     <bool name="config_enableAutoPowerModes">true</bool>
 
+      <!-- Data terminal only -->
+  <bool name="config_voice_capable">false</bool>
+  <bool name="config_sms_capable">false</bool>
+
+  
+
 </resources>
